sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: identifier expected but 'var' found.
  var beforeWhite = size-1. /* after that is white until whiteRed */
  ^